--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Thanks -->
     <h2>Thanks</h2>
     <p> This project was directly inspired by the ongoing grassroots community building efforts in Oakland and across the U.S. I am but a humble data scientist who draws inspiration 
-        from the people around me doing the work every day on the ground.  
+        from the people around me doing the work every day on the ground. If you enjoy this work, please keep in touch with me on <a href = "https://www.linkedin.com/in/nidhisinha00/"> LinkedIn </a>.
     </p>
 
     <!-- References -->
